--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
     <uses-permission
         android:name="com.google.android.gms.permission.AD_ID"
         tools:node="remove" />
@@ -21,7 +23,7 @@
         <activity
             android:name=".UpdateUserProfileActivity"
             android:exported="false"
-            android:label="Thay đổi thông tin"
+            android:label="Tài khoản"
             android:parentActivityName=".MainActivity"/>
 
         <receiver android:name=".notification.NotificationReceiver" />
